[package]
name = "block-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
redb = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
time = "0.3.34"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
clap = "~2.33"
bitcoincash-addr = "0.5.2"
rand = "0.4.6"
merkle-cbt = "0.2.2"
